syntax = "proto3";

package registry.api_boundary_node.v1;

message ApiBoundaryNodeRecord {
  string version = 1;
  reserved 2;
}
